# Hikari-LLVM19

./: .gitignore  README.md
.github/workflows/: ci.yml
obfuscation/: AntiClassDump.cpp  AntiDebugging.cpp  BogusControlFlow.cpp  CMakeLists.txt  ConstantEncryption.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  IndirectBranch.cpp  Obfuscation.cpp  SplitBasicBlocks.cpp  StringEncryption.cpp  SubstituteImpl.cpp  Substitution.cpp
obfuscation/include/: Obfuscation.h
